--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,40 @@
-pandas
-scikit-learn
-torch
-joblib
-transformers
-transformers[torch]
+accelerate==1.1.1
+certifi==2024.8.30
+charset-normalizer==3.4.0
+colorama==0.4.6
+filelock==3.13.1
+fsspec==2024.2.0
+huggingface-hub==0.26.3
+idna==3.10
+Jinja2==3.1.3
+joblib==1.4.2
+MarkupSafe==2.1.5
+mpmath==1.3.0
+networkx==3.2.1
+numpy==2.1.3
+packaging==24.2
+pandas==2.2.3
+pillow==10.2.0
+psutil==6.1.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+safetensors==0.4.5
+scikit-learn==1.5.2
+scipy==1.14.1
+sentence-transformers==3.3.1
+setuptools==70.0.0
+six==1.16.0
+sympy==1.13.1
+threadpoolctl==3.5.0
+tokenizers==0.20.3
+torch==2.5.1+cu118
+torchaudio==2.5.1+cu118
+torchvision==0.20.1+cu118
+tqdm==4.67.1
+transformers==4.46.3
+typing_extensions==4.9.0
+tzdata==2024.2
+urllib3==2.2.3
