--- a/.gitignore
+++ b/.gitignore
@@ -166,6 +166,7 @@ results/
 cluster.sh
 
 *.code-workspace
+*/.vscode
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
